manifests/cilium/components/talos/1.20.1/validatingadmissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: gateway.cilium.io
spec:
  policyName: gateway.cilium.io
  validationActions: [Deny]
  matchResources:
    resourceRules:
      - apiGroups: ["gateway.networking.k8s.io"]
        apiVersions: ["v1"]
        resources: ["gateways"]
        operations: ["CREATE", "UPDATE"]
